# themachine-pycontrol

./: CITATION.cff  README.md  graph.json  setup.cfg
drivers/: SUI_903x.py  eventlog.py  hotplate.py  hotplatetest.py  pump.py  relay.py  solenoid.py  valve.py  vial.py
graphgen/: graph.json
themachine-pycontrol-develop/themachine-pycontrol-develop/: README.md
themachine-pycontrol-develop/themachine-pycontrol-develop/themachine_pycontrol.egg-info/: PKG-INFO  requires.txt  top_level.txt
themachine-pycontrol-develop/themachine-pycontrol-develop/themachine_pycontrol/drivers/: hotplate.py  valve.py
themachine-pycontrol-develop/themachine-pycontrol-develop/themachine_pycontrol/graph/: generator.py
themachine-pycontrol-develop/themachine-pycontrol-develop/themachine_pycontrol/main/: __init__.py
themachine-pycontrol-develop/themachine-pycontrol-develop/themachine_pycontrol/operations/: __init__.py  transfer.py
themachine_pycontrol.egg-info/: SOURCES.txt
themachine_pycontrol/drivers/: __init__.py  errors.py  hotplate.py  pump.py  relay.py  test.py  valve.py  vessel.py  vial.py
themachine_pycontrol/graph/: __init__.py  generator.py  graph.json  search.py
themachine_pycontrol/graphgen/: generator.py  graph.json  graph.pkl
themachine_pycontrol/main/: graph_search.py
themachine_pycontrol/operations/: HeatStir.py  Reaction.py  atmosphere.py  transfer.py  transfers.py
