[metadata]
name = themachine_pycontrol
version = 0.0.2
description = "Object-oriented Python Code for The Machine"
long_description = file: README.md
author = "Anji Zhang"
author_email = ""
url= https://github.com/aspuru-guzik-group/themachine-pycontrol
# Did we have any license in mind?
license = MIT
keywords =  chemistry, synthesis
classifiers =
    Programming Language :: Python :: 3.9


[options]
packages = find:
include_package_data = True
install_requires = 
  clr
  networkx
  visa
  pyvisa
  modbus_tk
  serial
  matplotlib
  

[options.packages.find]
exclude = 
  tests
  docs


