[metadata]
name = themachine_pycontrol
version = 0.0.5
description = "Object-oriented Python Code for The Machine"
long_description = file: README.md
author = "Anji Zhang"
author_email = ""
url= https://github.com/aspuru-guzik-group/themachine-pycontrol
license = Apache License 2.0
keywords =  chemistry, synthesis
classifiers =
    Programming Language :: Python :: 3.9


[options]
packages = find:
include_package_data = True
install_requires = 
  matplotlib
  modbus_tk
  networkx
  pyserial
;  pythonnet must be installed from conda-forge or from a working wheel
;  OR switch to a different package
;  pythonnet
  pyvisa>=1.9.1
  singleton_decorator
  

[options.packages.find]
exclude = 
  tests
  docs


[options.package_data]
themachine_pycontrol =
  drivers/KEMPumpDLL.dll
